// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shoud renders for "linux" correctly 1`] = `
<div
  className="spacer-bottom"
>
  <h4
    className="spacer-bottom"
  >
    onboarding.analysis.build_wrapper.header.linux
  </h4>
  <p
    className="spacer-bottom markdown"
  >
    <FormattedMessage
      defaultMessage="onboarding.analysis.build_wrapper.text"
      id="onboarding.analysis.build_wrapper.text"
      values={
        Object {
          "env_var": <code>
            PATH
          </code>,
        }
      }
    />
  </p>
  <p>
    <a
      className="button"
      download="build-wrapper-linux-x86.zip"
      href="/static/cpp/build-wrapper-linux-x86.zip"
      rel="noopener noreferrer"
      target="_blank"
    >
      download_verb
    </a>
  </p>
</div>
`;

exports[`Shoud renders for "mac" correctly 1`] = `
<div
  className="spacer-bottom"
>
  <h4
    className="spacer-bottom"
  >
    onboarding.analysis.build_wrapper.header.mac
  </h4>
  <p
    className="spacer-bottom markdown"
  >
    <FormattedMessage
      defaultMessage="onboarding.analysis.build_wrapper.text"
      id="onboarding.analysis.build_wrapper.text"
      values={
        Object {
          "env_var": <code>
            PATH
          </code>,
        }
      }
    />
  </p>
  <p>
    <a
      className="button"
      download="build-wrapper-macosx-x86.zip"
      href="/static/cpp/build-wrapper-macosx-x86.zip"
      rel="noopener noreferrer"
      target="_blank"
    >
      download_verb
    </a>
  </p>
</div>
`;

exports[`Shoud renders for "win" correctly 1`] = `
<div
  className="spacer-bottom"
>
  <h4
    className="spacer-bottom"
  >
    onboarding.analysis.build_wrapper.header.win
  </h4>
  <p
    className="spacer-bottom markdown"
  >
    <FormattedMessage
      defaultMessage="onboarding.analysis.build_wrapper.text"
      id="onboarding.analysis.build_wrapper.text"
      values={
        Object {
          "env_var": <code>
            %PATH%
          </code>,
        }
      }
    />
  </p>
  <p>
    <a
      className="button"
      download="build-wrapper-win-x86.zip"
      href="/static/cpp/build-wrapper-win-x86.zip"
      rel="noopener noreferrer"
      target="_blank"
    >
      download_verb
    </a>
  </p>
</div>
`;
